--- a/task_2.ipynb
+++ b/task_2.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ \\ch x = \\sum^{\\infty}_{n=0}\\frac{1}{(2n)!}{x^{2n}} $$     "
+    "$$ \ch x = \\sum^{\\infty}_{n=0}\\frac{1}{(2n)!}{x^{2n}} $$     "
    ]
   },
   {
